public/stylesheets/style.css
:root {
  --nav: #131314;
  --background: #000000;
  --greyFont: #727272;
  --whiteFont: white;
  --stockYellow: rgb(221, 188, 0);
  --tickerYellow: rgba(255, 220, 24, 0.144);
  --transparentYellow: rgba(221, 188, 0, 0.37);
  --stockGreen: rgb(115, 255, 0);
  --brightGreen: greenyellow;
  --stockRed: red;
  --brightRed: red;
}

html {
  font-size: 62.5%;
  font-size: 0.6rem;
}
* {
  font-family: Helvetica;
  color: var(--whiteFont);
}

body {
  background-color: var(--background);
}

nav {
  position: fixed;
  display: flex;
  align-items: center;
  background-color: var(--nav);
  width: 100vw;
  height: 2rem;
  text-align: right;
  float: top;
  padding: 1.5rem;
  z-index: 2;
}

.navTitle {
  padding: 1rem;
  color: var(--stockYellow);
  font-weight: bold;
  white-space: nowrap;
}

.pageContainer {
  padding-top: 3.5rem;
}

#stockTitleAtShow {
  color: var(--stockYellow);
}

.stockShowControls {
  padding: 1rem 0 0 1rem;
}

.navButtons {
  padding: 0 0.5rem;
  color: var(--whiteFont);
}
.navButtons:hover {
  color: var(--whiteFont);
  border-bottom: 0.1rem solid var(--stockYellow);
  text-decoration: none;
  transition: all 0.2s ease-in-out;
}
.activeNav {
  color: var(--stockYellow);
}
.basicUser {
  color: var(--greyFont);
}
.basicUser:hover {
  color: var(--stockYellow);
}
#countDownNum {
  color: var(--greyFont);
}
#countDownNum:hover {
  color: var(--stockYellow);
}
a {
  text-decoration: none;
}
#watchListContent {
  width: 95vw;
  max-width: 800px;
}
tr {
  text-align: right;
}
.tickerLeft {
  text-align: left;
  font-weight: bold;
}
.ticker {
  padding: 0 0 0 0.5rem;
  color: var(--whiteFont);
  font-weight: bold;
}
.tickerTitle {
  border-right: none;
  font-weight: bold;
}

.ticker:hover {
  color: var(--stockYellow);
  text-decoration: none;
}

table {
  border-collapse: collapse;
}
#stockListTitle {
  border-bottom: 0.1rem solid var(--greyFont);
  color: var(--greyFont);
}
#stockName {
  text-align: left;
  color: var(--stockYellow);
  font-size: 0.8rem;
  max-width: 5rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  padding: 0 0 0 0.5rem;
}

.stockContent {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#eachStock {
  border-bottom: 0.1rem solid var(--greyFont);
  white-space: nowrap;
}
.stockRed {
  color: var(--stockRed);
}
.stockGreen {
  color: var(--stockGreen);
}

.tickerButton {
  border: none;
  background-color: var(--tickerYellow);
  width: 100%;
  max-width: 5rem;
  height: 100%;
  text-align: center;
  font-size: 1rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  padding-top: 0.2rem;
  padding-bottom: 0.2rem;
}
.tickerButton:hover {
  background-color: var(--stockYellow);
  color: black;
}

#searchForm {
  padding: 0.5rem 2rem;
  text-align: left;
}
#portfolioForm {
  padding: 2rem 0 1rem 0;
  text-align: center;
}
.search {
  border: 1px solid var(--stockYellow);
  max-width: 18rem;
  border-radius: 0.5rem;
  font-size: 1em;
  background-color: black;
  color: var(--stockYellow);
  outline: none;
  padding: 0.3rem 1.5rem;
}

.formButton {
  background-color: black;
  border: 0.1rem solid var(--stockYellow);
  color: var(--stockYellow);
  border-radius: 0.5rem;
  font-weight: bold;
  outline: none;
}
.formButton:hover {
  background-color: var(--stockYellow);
  color: black;
  font-weight: bold;
  outline: none;
}
.backButton {
  padding-bottom: 0.25rem;
}

.removeItem {
  background-color: transparent;
  color: var(--greyFont);
  text-align: center;
  vertical-align: middle;
  border-radius: 5rem;
  outline: none;
  border: none;
}
.removeItem:hover {
  background-color: var(--stockRed);
  color: var(--whiteFont);
  outline: none;
}

#removeHeader {
  color: black;
}
.removeButtonSlot {
  text-align: center;
}

#noStock {
  position: absolute;
  top: 40%;
  right: 50%;
  font-size: 2rem;
  transform: translateX(7.5rem);
}
.stockInfoContent {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.stockInfoTable {
  width: 95vw;
  max-width: 800px;
}

#portfolioTable {
  display: flex;
  flex-direction: column;
  text-align: center;
  align-items: center;
}
.portfolioSelection {
  background: black;
  color: var(--whiteFont);
  border: 0.2rem solid var(--stockYellow);
  width: 70vw;
  max-width: 30rem;
  border-radius: 1rem;
  padding: 0.1em 0.5em;
  font-size: 1em;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}
.portfolioSelection:hover {
  background-color: var(--transparentYellow);
  transform: scale(1.05);
}

#portfolioTitle {
  color: var(--whiteFont);
  padding: 8rem 0 0 0;
  text-align: center;
  font-size: 3.5rem;
}
#listPortfolio {
  font-size: 3rem;
  padding: 0.25rem;
  text-align: center;
}
.portfolioContent {
  display: flex;
  flex-direction: column;
  align-items: center;
}
#portfolioControl {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding-top: 1rem;
}
.holdingsList {
  width: 95vw;
  max-width: 800px;
}
.portfolioList {
  text-align: right;
}

.transactionBorderBottom {
  border: none;
}

#transaction {
  display: flex;
  flex-direction: row;
  align-content: center;
}

.portfolioListTitle {
  border-bottom: 0.1rem solid var(--greyFont);
}

.portfolioSections {
  display: flex;
  flex-direction: column;
  width: 95vw;
  max-width: 800px;
}

.portfolioEdit {
  background-color: transparent;
  border: none;
  color: var(--greyFont);
  border-radius: 0.5rem;
  font-size: 1rem;
  z-index: -1;
}
.portfolioEdit:hover {
  background-color: var(--stockYellow);
  color: black;
}

.portfolioEditActive {
  background-color: var(--stockYellow);
  color: black;
}

#portfolioEditting {
  background-color: black;
  border: 0.1rem solid var(--stockYellow);
  color: var(--stockYellow);
  border-radius: 0.25rem;
  padding-left: 0.5rem;
  font-size: 1.5rem;
  width: 16rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

#portfolioEditting:hover {
  border: 0.1rem solid var(--stockYellow);
}

#portfolioEditting:focus {
  border: 0.1rem solid var(--stockYellow);
  background-color: black;
}
.portfolioDelete {
  border: none;
  background-color: transparent;
  color: var(--greyFont);
  border-radius: 0.5rem;
  font-size: 1rem;
}

.portfolioDelete:hover {
  background-color: var(--stockRed);
  color: var(--whiteFont);
}

.portfolioDeleteHide {
  background-color: black;
  color: black;
  border: none;
  z-index: -1;
}

.portfolioDeleteButtonHide {
  color: black;
}

.portfolioDeleteContainer {
  padding-top: 0.25rem;
}

#portfolioDeleteFinal {
  background-color: black;
  border: 2px solid var(--stockRed);
  color: var(--stockRed);
  border-radius: 0.5rem;
  margin: 1.25rem 0 0 0;
  padding: 0 2rem;
  font-size: 2rem;
  width: 75vw;
  max-width: 30rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

#portfolioDeleteFinal:hover {
  background-color: var(--stockRed);
  color: var(--whiteFont);
  opacity: 100%;
}
.blink_me:hover {
  animation: blinker 0.5s linear infinite;
}

@keyframes blinker {
  50% {
    opacity: 100%;
  }
}

#portfolioDeleteBack {
  background-color: black;
  border: 1px solid var(--stockYellow);
  color: var(--stockYellow);
  border-radius: 0.5rem;
  margin: 1.25rem 0 0 0;
  padding: 0 2rem;
  font-size: 2rem;
  width: 75vw;
  max-width: 30rem;
}

#portfolioDeleteBack:hover {
  background-color: var(--stockYellow);
  color: black;
}

.portfolioDeletePadding {
  text-align: center;
  padding: 6rem 0;
}

.tickerTransactionUnbold {
  font-weight: normal;
}

#PLSection {
  display: flex;
  align-content: left;
  padding: 0.5rem;
}
.PLPrices {
  padding: 0 0 0 2rem;
}

.buySell {
  text-align: right;
}
.positionTitle {
  padding: 0 0.5rem 0 0;
}

#chart_div {
  width: 95vw;
  height: 60vw;
  margin: auto;
}

.buySellButtons {
  background-color: black;
  border: none;
  font-size: 1.5rem;
  padding: 0 0.5rem;
  border-radius: 0.25rem;
  margin: 0.2rem -0.1rem 0.2rem 0.2rem;
  width: 22vw;
  max-width: 12rem;
  outline: none;
}
#buyButton {
  color: var(--brightGreen);
  border: 2px solid var(--brightGreen);
}
#buyButton:hover {
  background-color: var(--brightGreen);
  color: black;
  outline: none;
}
#sellButton {
  color: var(--brightRed);
  border: 2px solid var(--brightRed);
}
#sellButton:hover {
  background-color: var(--brightRed);
  color: var(--whiteFont);
  outline: none;
}

.buySellNumBox {
  background-color: black;
  border: 0.2rem solid var(--stockYellow);
  color: var(--stockYellow);
  border-radius: 0.25rem;
  padding: 0 0.5rem 0 0.5rem;
  font-size: 1.5rem;
  margin: 0 0.2rem;
}
.buySellNumBox:focus {
  border: 0.2rem solid var(--stockYellow);
  background-color: black;
}
#buySellSharesBox {
  width: 22vw;
  max-width: 16rem;
}

input[type='text']#portfolioEditting::-webkit-input-placeholder {
  color: var(--stockYellow);
}

input[type='number']::-webkit-inner-spin-button,
input[type='number']::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
input[type='number'] {
  -moz-appearance: textfield;
}

.buySellPriceBox {
  background-color: rgb(34, 34, 34);
  color: var(--stockYellow);

  width: 22vw;
  max-width: 16rem;
}

.buySellToIndicator {
  color: var(--stockYellow);
  font-weight: bold;
  font-size: 1.5rem;
  padding: 0.25rem 0 0 0;
}

.premiumPriceBox {
  width: 22vw;
  max-width: 16rem;
}

#buySellPortfolioBox {
  width: 35vw;
  max-width: 16rem;
  -moz-appearance: none;
  -webkit-appearance: none;
  appearance: none;
}

.detailInfo {
  text-align: center;
}

.timeframeSelector {
  background-color: black;
  border: 0.1rem solid var(--stockYellow);
  color: var(--stockYellow);
  border-radius: 0.25rem;
  width: 15vw;
  min-width: 5rem;
  max-width: 9rem;
  text-align: center;
}
.timeframeSelected {
  background-color: var(--stockYellow);
  color: black;
}
.timeframeSelector:hover {
  background-color: var(--stockYellow);
  color: black;
  outline: none;
}
#timeframeSelectorContainer {
  width: 95vw;
  max-width: 800px;
  margin: auto;
  padding-top: 1rem;
}
#timeframeTitle {
  color: var(--stockYellow);
}
.heroContent {
  text-align: center;
  margin: 10rem 0 0 0;
}
.heroTitle {
  font-size: 3.5rem;
}
.motto {
  font-size: 1.5rem;
}
#heroStart {
  background-color: black;
  border: 3px solid var(--stockYellow);
  color: var(--stockYellow);
  border-radius: 0.75rem;
  padding: 0 3rem;
  font-size: 2.5rem;
  font-weight: bold;
}

#heroStart:hover {
  background-color: var(--stockYellow);
  color: black;
}

::placeholder {
  /* Chrome, Firefox, Opera, Safari 10.1+ */
  color: var(--stockYellow);
  opacity: 1; /* Firefox */
}

:-ms-input-placeholder {
  /* Internet Explorer 10-11 */
  color: var(--stockYellow);
}

::-ms-input-placeholder {
  /* Microsoft Edge */
  color: var(--stockYellow);
}

@media (min-width: 374px) {
  body {
    font-size: 1.1rem;
  }
  .tickerButton {
    font-size: 1.2rem;
    max-width: 6rem;
    padding-top: 0.25rem;
    padding-bottom: 0.25rem;
  }
  #stockName {
    font-size: 1rem;
    max-width: 6rem;
  }
}
@media (min-width: 427px) {
  body {
    font-size: 1.15rem;
  }
  .tickerButton {
    font-size: 1.3rem;
    max-width: 7rem;
    padding-top: 0.3rem;
    padding-bottom: 0.3rem;
  }
  #stockName {
    font-size: 1.15rem;
    max-width: 12rem;
  }
}
@media (min-width: 600px) {
  body {
    font-size: 1.5rem;
  }
  .tickerButton {
    font-size: 1.5rem;
    max-width: 10rem;
    padding-top: 0.35rem;
    padding-bottom: 0.35rem;
  }
  #stockName {
    font-size: 1.2rem;
    max-width: 15rem;
  }
}
@media (min-width: 768px) {
  body {
    font-size: 1.5rem;
  }
  .tickerButton {
    font-size: 1.8rem;
    max-width: 12rem;
    padding-top: 0.4rem;
    padding-bottom: 0.4rem;
  }
  #stockName {
    font-size: 1.5rem;
    max-width: 20rem;
  }
}

